Add bundle support for output paths